--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: capstone-app
-          image: 156041402660.dkr.ecr.us-east-1.amazonaws.com/capstone-ecr:latest
+          image: 156041402660.dkr.ecr.us-east-1.amazonaws.com/capstone:latest
           ports:
             - containerPort: 80
           env:
